# FBX-glTF-conv

./: .clang-format  .gitignore  CMakeLists.txt  FBX-glTF-conv-extras.d.ts  LICENSE  README.md  README.rst  appveyor.yml  vcpkg.json
.github/workflows/: Release.yml  Test.yml
CI/: AppveyorBuild.ps1  GitHubBuild.ps1  build.sh  install-fbx-sdk.bat
Cli/: CMakeLists.txt  Cli.cpp  ReadCliArgs.cpp  ReadCliArgs.h  Version.cpp  Version.h
Cli/Test/: ReadCliArgs.cpp
Core/: CMakeLists.txt
Core/Source/bee/: BEE_API.h  Converter.Test.h  Converter.cpp  Converter.h  GLTFBuilder.cpp  GLTFBuilder.h  GLTFUtilities.h  UntypedVertex.cpp  UntypedVertex.h
Core/Source/bee/Convert/: AnimationUtility.h  ConvertError.cpp  ConvertError.h  DirectSpreader.h  FbxMeshVertexLayout.h  GLTFSamplerHash.h  MyExtras.h  NeutralType.h  SceneConverter.Animation.cpp  SceneConverter.BlendShape.cpp  SceneConverter.Material.cpp  SceneConverter.Mesh.cpp  SceneConverter.Skin.cpp  SceneConverter.Texture.cpp  SceneConverter.cpp  SceneConverter.h
Core/Source/bee/Convert/fbxsdk/: LayerelementAccessor.h  MeshInstancingKey.cpp  MeshInstancingKey.h  ObjectDestroyer.h  SplitMeshByMaterial.cpp  SplitMeshByMaterial.h  Spreader.h  String.cpp  String.h
Core/Source/bee/Convert/glTF-extensions/: KHR_animation_pointer.h
Core/Test/: Animation.cpp  Demo.cpp  Mesh.cpp
Core/fx/include/fx/: gltf.h
Polyfills/nlohmann-json/bee/polyfills/: json.h
Polyfills/std.filesystem/: README.md
Polyfills/std.filesystem/bee/polyfills/: filesystem.h
Polyfills/std.filesystem/ghc-filesystem/: filesystem.hpp
types/: FBX-glTF-conv-extras.d.ts
